[gd_scene load_steps=2 format=3 uid="uid://bwm0mfnnf5s4s"]

[ext_resource type="Script" path="res://scripts/ui/winner_list_panel.gd" id="1_6eplw"]

[node name="WinnerListPanel" type="Panel"]
custom_minimum_size = Vector2(250, 380)
script = ExtResource("1_6eplw")

[node name="VBoxContainer" type="VBoxContainer" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/separation = 10

[node name="Label" type="Label" parent="VBoxContainer"]
layout_mode = 2
text = "获奖名单"
horizontal_alignment = 1

[node name="WinnersContainer" type="ScrollContainer" parent="VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3

[node name="WinnersList" type="VBoxContainer" parent="VBoxContainer/WinnersContainer"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="ExportButton" type="Button" parent="VBoxContainer"]
layout_mode = 2
text = "导出结果"

[connection signal="pressed" from="VBoxContainer/ExportButton" to="." method="_on_export_button_pressed"]
